Comleted 99% version